[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Backpack/MouseCurso.gd" type="Script" id=2]
[ext_resource path="res://Backpack/Inventory.gd" type="Script" id=3]
[ext_resource path="res://Item/texts/icon2.png" type="Texture" id=4]
[ext_resource path="res://Backpack/mouse2.gd" type="Script" id=5]

[node name="BackPack" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Inventory" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="grid" type="TextureRect" parent="Inventory"]
modulate = Color( 0, 0, 0, 0.25098 )
margin_left = -640.0
margin_top = -320.0
margin_right = 640.0
margin_bottom = 320.0
texture = ExtResource( 1 )
stretch_mode = 2

[node name="MouseCurso" type="Sprite" parent="Inventory"]
script = ExtResource( 2 )

[node name="GridContainer" type="Node2D" parent="Inventory"]
position = Vector2( -640, -320 )
script = ExtResource( 3 )

[node name="Options" type="Sprite" parent="Inventory"]
self_modulate = Color( 0, 0, 0, 0.52549 )
scale = Vector2( 3, 2 )
z_index = 4096
z_as_relative = false
texture = ExtResource( 4 )
centered = false
script = ExtResource( 5 )

[node name="Drop" type="Button" parent="Inventory/Options"]
margin_right = 64.0
margin_bottom = 31.0
text = "Drop"
flat = true

[node name="Use" type="Button" parent="Inventory/Options"]
margin_top = 32.0
margin_right = 64.0
margin_bottom = 63.0
text = "Use"
flat = true

[connection signal="button_down" from="Inventory/Options/Drop" to="Inventory/Options" method="_on_Drop_button_down"]
[connection signal="button_down" from="Inventory/Options/Drop" to="Inventory/GridContainer" method="_on_Drop_button_down"]
[connection signal="button_down" from="Inventory/Options/Use" to="Inventory/Options" method="_on_Use_button_down"]
[connection signal="button_down" from="Inventory/Options/Use" to="Inventory/GridContainer" method="_on_Use_button_down"]
